# VsCode

./: .gitignore
ASIO SDK EXAMPLE/headers/: ADPAsio.h  ADPAsioBuffers.h  ADPAsioDebug.h  ADPAsioDriverInfo.h  ADPAsioDriverList.h  ADPDefaultAsioCallbacks.h
ASIO SDK EXAMPLE/sources/: ADPAsioBuffers.cpp  ADPAsioChannels.cpp  ADPAsioDebug.cpp  ADPAsioDriverInfo.cpp  ADPAsioDriverInfoData.cpp  ADPAsioDriverList.cpp  ADPDefaultAsioCallbacks.cpp  ADPSamplesAndTime.cpp
ASIOFresh/: ASIOCustomCallback.h  CMakeLists.txt  hostsample.cpp  imgui.ini  oldsomething.cpp  something.cpp  test.cpp
ASIOFresh/ASIOSDK/headers/: ASIOCustomCallback.h  asio.h  asiodrivers.h  asiolist.h
ASIOFresh/ASIOSDK/sources/: asiodrivers.cpp  asiolist.cpp
ASIOFresh/AsioCallbacks/: CustomCallback.h  POPFix.h
ASIOFresh/Objects/BoundingVolume/: GraphicVolume.h
ASIOFresh/Objects/InstancedGeometry/: InstanceUniformBuffer.h  instance.vs
ASIOFresh/OpenGLTools/: OpenGLObjectTools.h  OpenGLToolBox.h
ASIOFresh/OpenGLTools/Cameras/: DirectedSceneCamera.h
ASIOFresh/OpenGLTools/Geometry/: FGeom.h
ASIOFresh/headers/: ADPAsio.h  ADPAsioBuffers.h  ADPAsioCallbacks.h  ADPAsioChannels.h  ADPAsioDevice.h  ADPAsioDriverInfo.h  ADPAsioDriverInfoData.h  ADPAsioDriverList.h  ADPAsioEngine.h  ADPDefaultAsioCallbacks.h  ADPSamplesAndTime.h  ADPStructures.h  ADPTimeInfo.h
ASIOFresh/sources/: ADPAsioBuffers.cpp  ADPAsioCallbacks.cpp  ADPAsioDriverInfo.cpp  ADPAsioDriverList.cpp  ADPAsioEngine.cpp  ADPDefaultAsioCallbacks.cpp  ADPSamplesAndTime.cpp
AsioServer/: AsyncClient.cpp  AsyncServer.cpp  SyncClient.cpp  SyncServer.cpp  SyncServerMessage.cpp
AsioServer/ThreadsAndAsynchronousDatastructures/: main.cpp
Chemistry 102/: PeriodicExtraction.h  something.cpp
Chemistry 102/headers/: 102ColumbsLaw.h  102Constants.h  102ElectronConfiguration.h  102Element.h  102ElementArray.h  102Elements.h  102Ion.h  102LewisStructure.h  102Quest1.h  DTOuterQueue.h
DIRECT SOUND EXAMPLE/headers/: DSDeviceEnumeration.h
Dependencies/Wrappers/: NCL.h  NCLBuffer.h  NCLCommandQueue.cpp  NCLCommandQueue.h  NCLContext.cpp  NCLContext.h  NCLDebug.h  NCLDevice.cpp  NCLDevice.h  NCLEvent.h  NCLImage.h  NCLKernel.h  NCLPlatform.h  NCLProgram.h  NCLSampler.h  NFW.h  NFWDebug.cpp  NFWDebug.h  NFWErrorLog.h  NFWMonitor.h  NFWMonitors.cpp  NFWMonitors.h  NFWWindow.cpp  NFWWindow.h  NGL.h  NGLBuffer.h  NGLDebug.h  NGLErrorLog.h  NGLFramebuffer.h  NGLInformation.h  NGLProgram.h  NGLQuery.cpp  NGLQuery.h  NGLRenderbuffer.h  NGLRenderer.h  NGLSampler.h  NGLShader.h  NGLStateManagment.h  NGLSync.h  NGLTexture.h  (+2 more)
GLBasis/: CMakeLists.txt  FiniteDifferenceVisual.cpp  Goroud.cpp  GoroudDiffuseSpecularMap.cpp  Material.cpp  Phong.cpp  WavesChapter1.cpp  defaultMain.txt  fragment.glsl  imgui.ini  main.cpp  vertex.glsl
GLBasis/headers/: 2DAxis.h  FGeom.h  GeometricAlgorithmCommand.h  GeometricHelper.h  LearnOpenglHelper.h  Lights.h  NILMesh.h  SDFArchive.h  UVSphere.h
GLBasis/shaders/: 1DDiffusion.fs  1DDiffusion.vs  Seafloor.vs  StiffnessRod.fs  StiffnessRod.vs  WaveToTexture.fs  WaveToTexture.vs  WaveToTextureLookupTable.fs  WaveToTextureLookupTable.vs  WaveToWaterTextureLookup.fs  WaveToWaterTextureLookup.vs  gertsner.fs  gertsner.vs  goroud.fs  goroud.vs  goroudDMap.vs  lightSource.fs  material.fs  material.vs  phong.fs  staticSceneShader.fs  staticSceneShader.vs  wavewater.fs  wavewater.vs  wavewaterWithNormalMap.fs  wavewaterWithNormalMap.vs
GLTextEntry/: CMakeLists.txt  CentralTemplate.cpp  ParsingTrainer.cpp  imgui.ini  wavewater.cpp
GLTextEntry/2D/: CircleBuffer.h  OrthoCamera.h  PersistentUniformBuffer.h
GLTextEntry/headers/: AtlasTester.h  Camera.h  DistanceVolumeCenter.h  DomainBasedAxis2D.h  Entity.h  FGTextureAtlas.h  FGeom.h  FullScreenQuad.h  GraphicVector.h  InputBox.h  InputContainer.h  LearnOpenglHelper.h  MappedPlane.h  NILMesh.h  SDFArchive.h  UVSphere.h  UVSphereFactory.h  WindowStats.h  fon.h  vec234.h
GLTextEntry/shaders/: 1DDiffusion.vs  AtlasTester.fs  AtlasTester.vs  FullScreenQuad.fs  GraphicVector.fs  GraphicVector.vs  PlaneProjection.fs  PlaneProjection.vs  SphereFactory.fs  SphereFactory.vs  TextBitmapShader.fs  TextBitmapShader.vs  defaultShader.fs
Geometry/: AVLBALANCE.hpp  CGClockWisePoly.h  CGRead.h  Chapter1ConvexHull.cpp  Chapter1ConvexHull.h  Chapter2LineIntersections.cpp  Deque.hpp  HashList.hpp  IntervalTree.hpp  LIEventPoint.hpp  PPChronoPool.cpp  PPChronoPool.h  PqueArray.hpp  RBStatus.hpp  RBTree.h  StatusStructure.hpp  TArray.h  Test.cpp  chainedhash.hpp  hashcodes.hpp  linearprobe.hpp  ran.hpp  traveler.cpp  vectwo.hpp
Geometry/Chapter2Dcel/: AccurateStatusModel.h  DCEL.h  DCELHead.hpp  DCELInnerFaces.cpp  DCELIntersection.hpp  DcelDriver.cpp  StableArray.h
Geometry/Chapter3Tri/: Chapter3Driver.cpp  Chapter3Triangulation.cpp  MakeMonotope.cpp  MakeMonotope.h  PartitioningMonotones.h  QuadTree.h  QuadtreeHead.h  TriangulateMonotone.h  TriangulateMonotoneHelper.h  VertexInteriorAngle.h
LTX/: Design.cpp  Hanoi.py  Quadtree.cpp  restart.cpp  something.cpp
LTX/headers/: AVLBALANCE.hpp  LTXAllocator.h  LTXBernouliCoefficient.h  LTXCubicBezierCurve.h  LTXCubicBezierCurveSolution.h  LTXCurveList.h  LTXCyclic.hpp  LTXDeCasteljau.h  LTXExpandedCurveList.h  LTXLineSegment.h  LTXParametricBezierLine.h  LTXPoint.h  LTXQuadraticBezierCurve.h  LTXStructures.h  LTXVector.h  Quadtree.h  QuadtreeHead.h  (+2 more)
OTF EXTRACT/: TTFGO.cpp  bufferskip.txt  chardata.txt  latexin.txt  latexout.py  latexout.txt  operatorCodeListing.txt  something.cpp
PDE/: DifferencesCalculations.cpp  EliminationAndMatrixSolutions.h  EmptyConst.hpp  Factorial.h  FiniteDifferenceOneDimension.h  GEmat2.cpp  GEmat2.h  GEmat3.cpp  GEmat3.h  GFGMat.h  GenMat.hpp  back_prop.txt  datatemp.txt  main.cpp  mat4.hpp  movieizedata.py
TextQuick/: CMakeLists.txt  TextQuickRendering.cpp
Topology/: AVLBALANCE.hpp  AVLREDUX.cpp  AVLREDUX.hpp  DCEL.cpp  DCEL.h  DCELHead.hpp  DCELIntersection.hpp  DList.hpp  Deque.hpp  RBStatus.hpp  RBTree.h  viewtree.hpp
Tree Node/: OctreeTesting.cpp  experimentalinsertion.txt  something.cpp
(+215 files in other folders)
