cmake_minimum_required(VERSION 3.15)
project(ASIOFresh LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_BUILD_TYPE "Ninja")
set(CMAKE_BUILD_TYPE Debug)


set(HEADER_DIR ${PROJECT_SOURCE_DIR}/headers)
set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/sources)
set(ASIO_DIR_HEAD ${PROJECT_SOURCE_DIR}/ASIOSDK/headers)
set(ASIO_DIR_SOURCE ${PROJECT_SOURCE_DIR}/ASIOSDK/sources)
file(GLOB_RECURSE HEADER_FILES "${HEADER_DIR}/*.h")
file(GLOB_RECURSE SOURCE_FILE "${SOURCE_DIR}/*.cpp*")
file(GLOB_RECURSE ASIO_HEADER_FILES "${ASIO_DIR_HEAD}/*.h")
file(GLOB_RECURSE ASIO_SOURCE_FILE "${ASIO_DIR_SOURCE}/*.cpp*")


add_executable(${PROJECT_NAME} ${SOURCE_FILE} ${HEADER_FILES} ${ASIO_SOURCE_FILE} ${ASIO_HEADER_FILES}  hostsample.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE ${HEADER_DIR} ${ASIO_DIR_HEAD})
target_link_libraries(${PROJECT_NAME} ole32 winmm uuid)

set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${PROJECT_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION "true")
set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_INCREMENTAL_LINK "true")